2007-07-24  Michael Snyder  <msnyder@access-company.com>

	* opncls.c (bfd_make_writable): Check return from bfd_malloc.

	* elflink.c (bfd_elf_final_link): Avoid redundant frees -- return
	on bfd_malloc error rather than goto error_return.

2007-07-24  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (_bfd_elf_link_just_syms, merge_sections_remove_hook,
	_bfd_elf_merge_sections, _bfd_elf_link_hash_newfunc,
	_bfd_elf_link_hash_copy_indirect, _bfd_elf_link_hash_hide_symbol,
	_bfd_elf_link_hash_table_init, _bfd_elf_link_hash_table_create,
	bfd_elf_set_dt_needed_name, bfd_elf_get_dyn_lib_class,
	bfd_elf_set_dyn_lib_class, bfd_elf_get_needed_list,
	bfd_elf_get_runpath_list, bfd_elf_get_dt_soname,
	bfd_elf_get_bfd_needed_list, struct elf_symbuf_symbol,
	struct elf_symbuf_head, struct elf_symbol, elf_sort_elf_symbol,
	elf_sym_name_compare, elf_create_symbuf,
	bfd_elf_match_symbols_in_sections,
	_bfd_elf_match_sections_by_type): Move to here..
	* elf.c: ..from here.

2007-07-23  Richard Sandiford  <richard@codesourcery.com>

	* elflink.c (_bfd_elf_fix_symbol_flags): Only assert the type
	of weakdef->root.type if weakdef has no regular definition.

2007-07-22  Adam Nemet  <anemet@caviumnetworks.com>

	* elfxx-mips.c (struct mips_elf_link_hash_table): Add new field
	small_data_overflow_reported.
	(_bfd_mips_elf_link_hash_table_create): Initialize it.
	(_bfd_mips_elf_relocate_section) <bfd_reloc_overflow>: Report
	small-data section overflow.

2007-07-19  Doug Kwan  <dougkwan@google.com>

	PR binutils/4797
	* dwarf2.c: (find_line) Do not dereference functionname_ptr if
	do_line is true.

2007-07-18  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (xtensa_callback_required_dependence): Ignore
	non-ELF sections.

2007-07-18  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (elf_xtensa_finish_dynamic_sections): Get section
	vma and size for dynamic tags from the output sections.

2007-07-18  Alan Modra  <amodra@bigpond.net.au>
